--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-server.port=8081
+server.port=8765
 
 #log4j.appender.consoleAppender=org.apache.log4j.ConsoleAppender
 #log4j.appender.consoleAppender.layout=org.apache.log4j.PatternLayout
 #log4j.appender.consoleAppender.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/test_database?currentSchema=test_schema
-spring.datasource.username=java
-spring.datasource.password=java
+spring.datasource.url=jdbc:postgresql://localhost:5432/monopoly?currentSchema=game_resources
+spring.datasource.username=monopoly_test
+spring.datasource.password=mono
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 
 #spring.flyway.enabled=true
 #spring.flyway.baselineOnMigrate=true
+spring.flyway.table = resource_schema_history
